--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "cron": "node cron-job.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "node-cron": "^3.0.3",
-    "resend": "^2.1.0"
+    "resend": "^2.1.0",
+    "sqlite3": "^5.1.6"
   },
   "engines": {
     "node": ">=18.0.0"
