--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.18.2",
     "node-cron": "^3.0.3",
     "resend": "^2.1.0",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
