--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "dependencies": {
     "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "node-cron": "^3.0.3",
+    "node-fetch": "^2.6.1",
     "resend": "^2.1.0",
-    "sqlite3": "^5.1.6",
-    "node-fetch": "^2.6.1"
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
