--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cron": "node cron-job.js"
   },
   "dependencies": {
+    "@sentry/node": "^9.26.0",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
