--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "node-cron": "^3.0.3",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.10.1",
     "resend": "^2.1.0",
     "sqlite3": "^5.1.6"
   },
