--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-cron": "^3.0.3",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.10.1",
+    "pdfkit": "^0.17.1",
     "resend": "^2.1.0",
     "sqlite3": "^5.1.6"
   },
